--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@a2seven/yoo-checkout": "^1.1.4",
+    "@supabase/supabase-js": "^2.42.5",
     "cors": "^2.8.5",
     "express": "^4.19.2"
   }
